src/test/deca/context/valid/return/return_this.deca
// Description :
// Return de this depuis une méthode d’objet
//
// Resultats :
// ok

class A {
    A f() { return this; }
}
