src/test/deca/context/invalid/avecObjet/method_return_object_mismatch_custom.deca
// Description :
// retour d'un objet incompatible
//
// Resultats :
// Erreur contextuelle
// Ligne 7 : type de retour incorrect

class J {}

class K {}

class L {
    J f() {
        return new K(); // invalide
    }
}
